<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="#BFFF0000"
    android:orientation="vertical"
    android:padding="5dp">

    <EditText
        android:id="@+id/productShopID"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_id"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/product_name"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/product_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_product"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/brandName"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productShopID" />

    <EditText
        android:id="@+id/brandName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_brand"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/quantityCount"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/product_name" />

    <EditText
        android:id="@+id/quantityCount"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_quantity"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/unitName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/brandName" />

    <EditText
        android:id="@+id/unitName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_unit"
        android:inputType="textPersonName"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/priceEuro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/quantityCount"
        app:layout_constraintTop_toTopOf="@+id/quantityCount" />

    <EditText
        android:id="@+id/priceEuro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_euro"
        android:inputType="number"
        android:textAlignment="viewEnd"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/priceCent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/unitName"
        app:layout_constraintTop_toTopOf="@+id/quantityCount" />

    <EditText
        android:id="@+id/priceCent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:hint="@string/bill_item_hint_cent"
        android:inputType="number"
        android:maxLength="2"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/priceEuro"
        app:layout_constraintTop_toTopOf="@+id/quantityCount" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/editSaveButton" />

    <Button
        android:id="@+id/editSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/ic_menu_save"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>